add firebase add

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <meta name="keyword" content="Bootstrap,Admin,Template,Angular,Dashboard,Typescript">
   <link rel="shortcut icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
-  
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<title>TimeSheet</title>
 </head>
 <body class="app">
